updating minor changes

--- a/Index.html
+++ b/Index.html
@@ -130,7 +130,7 @@
                     <div class="image"><img src="https://www.pepsi.com/en-us/refresh082123/images/PepsiLogo@3x.png"
                             alt=""></div>
                     <div class="aboutme-tex-cont">
-                        <p>(ABOUT <span class="bold">PEPSI</span>)</p>
+                        <p>(ABOUT <span class="bold">ME</span>)</p>
                         <p>
                             Welcome to my corner of the web! I'm Syed Afraz, a passionate programmer with a love for Python and a growing expertise in web development. Whether I'm teaching Python to eager students or crafting retro-inspired games with Pygame, I'm always excited to dive into new challenges and learn something new. My journey has been a blend of curiosity, creativity, and a drive to build things that not only work but also bring joy and value to others. I believe in the power of code to create, inspire, and solve real-world problems, and I'm thrilled to share my projects and experiences with you. Let's build something amazing together!
                         </p>
@@ -242,22 +242,15 @@
 
                     <div class="Right">
                         <ul class="start">
-                            <li><a href="https://github.com/Afrazsajid/AwardedWebsites/tree/main/cynthiaugwu-clone"
+                            <li><a href="https://github.com/Afrazsajid/"
                                     target="_blank">
-                                    dribbble
+                                    github
                                 </a></li>
-                            <li><a href="https://github.com/Afrazsajid/AwardedWebsites/tree/main/cynthiaugwu-clone"
+                            <li><a href="https://www.instagram.com/programming_with_afraz/"
                                     target="_blank">
                                     instagram
                                 </a></li>
-                            <li><a href="https://github.com/Afrazsajid/AwardedWebsites/tree/main/cynthiaugwu-clone"
-                                    target="_blank">
-                                    linkedin
-                                </a></li>
-                            <li><a href="https://github.com/Afrazsajid/AwardedWebsites/tree/main/cynthiaugwu-clone"
-                                    target="_blank">
-                                    twitter
-                                </a></li>
+             
                         </ul>
                     </div>
                 </div>
