--- a/Index.html
+++ b/Index.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 
-    <link rel="shortcut icon" href="https://www.pepsi.com/en-us/refresh082123/images/PepsiLogo@3x.png"
-        type="image/x-icon">
+
 
 
 
@@ -101,8 +100,8 @@
                 </a>
 
 
-                <a id="item3" class="item" href="">
-                    <img src="https://www.pepsi.com/en-us/refresh082123/images/cans/44337_Titan_CFP_Can_12oz_FR.png"
+                <a id="item3" class="item" href="https://github.com/Afrazsajid/audionic_reimagine">
+                    <img src="https://res.cloudinary.com/dsfm7zxhg/image/upload/v1724746296/No.1AudioBrandinPakistanlWirelessEarbudslBluetoothSpeakers-Audionic-GoogleChrome2024-08-2713-06-46-ezgif.com-video-to-gif-converter_m7fira.gif"
                         alt="">
 
                     <p>AUDIONIC REIMAGINE</p>
