--- a/Index.html
+++ b/Index.html
@@ -208,7 +208,7 @@
 
             <div class="yt-sec">
                 <p>(FORGOT TO MENTION)</p>
-                <a href="https://www.youtube.com/user/PEPSI">Follow  TO MY INSTAGRAM PAGE <i
+                <a href="https://www.instagram.com/programming_with_afraz/">Follow  TO MY INSTAGRAM PAGE <i
                         class="ri-arrow-right-up-fill"></i></a>
             </div>
 
