--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 
+    <link rel="shortcut icon" href="https://res.cloudinary.com/dsfm7zxhg/image/upload/v1728413124/portfolio_wszvt6.png" type="image/x-icon">
 
 
 
@@ -234,6 +235,7 @@
                                     target="_blank">
                                     instagram
                                 </a></li>
+                                <a href="https://www.flaticon.com/free-icons/portfolio" title="portfolio icons">Portfolio icons created by Freepik - Flaticon</a>
              
                         </ul>
                     </div>
